# smt-metrics

./: LICENSE  README.md  main.py  pyproject.toml
analysis/: dataset_characteristics.py  edit_paths.py  error_category.py  prepare_dataset.py  script_runner.py  semantic_comparison.py  steps_to_fix.py  syntactic_analysis.py
results/: chain_semantic_comparison.csv  consecutive_semantic_comparison.csv  fmp-solver-results.csv  fmp_edit_paths_chain_levenshtein.csv  fmp_edit_paths_chain_list.csv  fmp_edit_paths_chain_overview.csv  fmp_edit_paths_status.csv  fmp_error_context_counts.xlsx  fmp_steps_to_fix.csv  fmp_syntactic_equivalences.csv  non_consecutive_equivalent_pairs.csv  non_consecutive_incomparable_pairs.csv  non_consecutive_s1_refines_s2_pairs.csv  non_consecutive_s2_refines_s1_pairs.csv
